--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!-- <script src="js/02-degisken-tanimlama.js"></script> -->
     <!-- <script src="js/03-degisken-tanimlama.js"></script> -->
     <!-- <script src="js/04-number-veri-turu-ile-calismak.js"></script> -->
-    <script src="js/06-veri-turu-ve-ve-donusmeleri.js"></script>
+    <!-- <script src="js/06-veri-turu-ve-ve-donusmeleri.js"></script> -->
+    <script src="js/07-template-literal-kullanimi.js"></script>
 </body>
 </html>
