--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <!-- <script src="js/03-degisken-tanimlama.js"></script> -->
     <!-- <script src="js/04-number-veri-turu-ile-calismak.js"></script> -->
     <!-- <script src="js/06-veri-turu-ve-ve-donusmeleri.js"></script> -->
-    <script src="js/07-template-literal-kullanimi.js"></script>
+    <!-- <script src="js/07-template-literal-kullanimi.js"></script> -->
+    <!-- <script src="js/08-string-veri-turu-islemleri.js"></script> -->
+    <script src="js/09-document-object-model.js"></script>
+    
+
 </body>
 </html>
