--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patika - Front-End 101</title>
+
+    <!-- style ile class'a ozellik ekleme -->
+    <style>
+        .text-primary {
+            color: blue
+        }
+    </style>
+
+
+
 </head>
 <body>
-    <h1>Patika - Front-End 101</h1>
+    <h1 id="greeting">Patika - Front-End 101</h1>
     
     <!-- 010 dom icerisinden oge secimi ve duzenleme islemleri:
     <h2 id="title">Merhaba Dünya</h2>
@@ -18,6 +28,13 @@
         </li>
     </ul>
     -->
+
+    <!-- 012 - liste icerisindeki son elemana ulasmak veya eklemek -->
+    <!-- <ul id="list">
+        <li>Lorem.</li>
+        <li>Amet.</li>
+        <li>Autem?</li>
+    </ul> -->
 
     <!-- <script>
         console.log("Hello, World!")
@@ -34,7 +51,11 @@
     <!-- <script src="js/08-string-veri-turu-islemleri.js"></script> -->
     <!-- <script src="js/09-document-object-model.js"></script> -->
     <!-- <script src="js/010-dom-icerisinden-oge-secimi.js"></script> -->
-
+    <!-- <script src="js/011-prompt-ile-kullanicidan-bilgi-almak.js"></script> -->
+    <!-- <script src="js/012-liste-icerisindeki-ogeye-ulasmak-veya-yeni-oge-eklemek.js"></script> -->
+    <!-- <script src="js/013-css-class-eklemek-veya-cikartmak.js"></script> -->
+    <!-- <script src="js/014-karsilastirma-operatorleri-ve-mantiksal-operatorler.js"></script> -->
+    <script src="js/015-kosullarla-calismak.js"></script>
 
 </body>
 </html>
