--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         .text-primary {
             color: blue
         }
+        .text-danger {
+            color: red
+        }
     </style>
 
 
@@ -18,6 +21,7 @@
 </head>
 <body>
     <h1 id="greeting">Patika - Front-End 101</h1>
+    <h2 id="info"></h2>
     
     <!-- 010 dom icerisinden oge secimi ve duzenleme islemleri:
     <h2 id="title">Merhaba Dünya</h2>
@@ -55,7 +59,10 @@
     <!-- <script src="js/012-liste-icerisindeki-ogeye-ulasmak-veya-yeni-oge-eklemek.js"></script> -->
     <!-- <script src="js/013-css-class-eklemek-veya-cikartmak.js"></script> -->
     <!-- <script src="js/014-karsilastirma-operatorleri-ve-mantiksal-operatorler.js"></script> -->
-    <script src="js/015-kosullarla-calismak.js"></script>
+    <!-- <script src="js/015-kosullarla-calismak.js"></script> -->
+    <!-- <script src="js/016-coklu-kosullar-ile-calismak.js"></script> -->
+    <!-- <script src="js/017-ternary-operator-ile-short-if-kullanimi.js"></script> -->
+    <script src="js/018-kosullarla-calismak-bolum-sonu-egzersizi.js"></script>
 
 </body>
 </html>
