--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
     <!-- <script src="js/015-kosullarla-calismak.js"></script> -->
     <!-- <script src="js/016-coklu-kosullar-ile-calismak.js"></script> -->
     <!-- <script src="js/017-ternary-operator-ile-short-if-kullanimi.js"></script> -->
-    <script src="js/018-kosullarla-calismak-bolum-sonu-egzersizi.js"></script>
+    <!-- <script src="js/018-kosullarla-calismak-bolum-sonu-egzersizi.js"></script> -->
+    <!-- <script src="js/019-fonksiyonlar-neden-fonksiyonlara-ihtiyac-duyariz-ve-ilk-fonksiyonumuz.js"></script> -->
+    <!-- <script src="js/020-fonksiyona-parametre-atamak-ve-gerdonus-almak.js"></script> -->
+    <script src="js/021-arrow-function-kullanimi.js"></script>
 
 </body>
 </html>
