--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
         <li>Autem?</li>
     </ul> -->
 
+    <!-- 023 - js bolum sonu egzersizi -->
+    <h3 id="counter">100</h3>
+    <button id="increase">Arttir</button>
+    <button id="decrease">Azalt</button>
+
+
+
     <!-- <script>
         console.log("Hello, World!")
     </script> -->
@@ -65,7 +72,9 @@
     <!-- <script src="js/018-kosullarla-calismak-bolum-sonu-egzersizi.js"></script> -->
     <!-- <script src="js/019-fonksiyonlar-neden-fonksiyonlara-ihtiyac-duyariz-ve-ilk-fonksiyonumuz.js"></script> -->
     <!-- <script src="js/020-fonksiyona-parametre-atamak-ve-gerdonus-almak.js"></script> -->
-    <script src="js/021-arrow-function-kullanimi.js"></script>
+    <!-- <script src="js/021-arrow-function-kullanimi.js"></script> -->
+    <!-- <script src="js/022-dom-etkinlikleriyle-calismak.js"></script> -->
+    <script src="js/023-functions-bolum-sonu.js"></script>
 
 </body>
 </html>
