--- a/index.html
+++ b/index.html
@@ -74,7 +74,10 @@
     <!-- <script src="js/020-fonksiyona-parametre-atamak-ve-gerdonus-almak.js"></script> -->
     <!-- <script src="js/021-arrow-function-kullanimi.js"></script> -->
     <!-- <script src="js/022-dom-etkinlikleriyle-calismak.js"></script> -->
-    <script src="js/023-functions-bolum-sonu.js"></script>
+    <!-- <script src="js/023-functions-bolum-sonu.js"></script> -->
+    <!-- <script src="js/024-locaStorage-icerisine-veri-eklemek-silmek-duzeltmek.js"></script> -->
+    <!-- <script src="js/025-localStorage-icerisine-farkli-turlerde-veri-girmek.js"></script> -->
+    <script src="js/026-localStorage-bolum-sonu-egzerisizi.js"></script>
 
 </body>
 </html>
