--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Patika - Front-End 101</title>
 
     <!-- style ile class'a ozellik ekleme -->
-    <style>
+    <!-- <style>
         .text-primary {
             color: blue
         }
         .text-danger {
             color: red
         }
-    </style>
+    </style> -->
 
-
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
 </head>
+
+<div id="alert"></div>
+
 <body>
     <h1 id="greeting">Patika - Front-End 101</h1>
     <h2 id="info"></h2>
-    
+
     <!-- 010 dom icerisinden oge secimi ve duzenleme islemleri:
     <h2 id="title">Merhaba Dünya</h2>
 
@@ -41,18 +45,51 @@
     </ul> -->
 
     <!-- 023 - js bolum sonu egzersizi -->
-    <h3 id="counter">100</h3>
+    <!-- <h3 id="counter">100</h3>
     <button id="increase">Arttir</button>
-    <button id="decrease">Azalt</button>
+    <button id="decrease">Azalt</button> -->
 
+    <!-- <div class="container mt-5">
+        <div class="row">
+            <div class="cow-sm-8 offset-sm-2">
+                <form id="userForm">
+                    <div class="mb-3">
+                        <label class="form-label" for="username">Kullanici Adi</label>
+                        <input class="form-control" type="text" name="username" id="username" />
+                    </div>
 
+                    <div class="mb-3">
+                        <label class="form-label" for="score">Not Bilgisi</label>
+                        <input class="form-control" type="number" name="score" id="score" />
+                    </div>
+
+                    <div class="mb-3">
+
+                        <button type="reset" class="btn btn-danger">Sifirla</button>
+                        <button type="submit" class="btn btn-success">Gonder</button>
+                    </div>
+                </form>
+            </div>
+            <div class="cow-sm-8 offset-sm-2 mt-4">
+                <ul class="list-group" id="userList">
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                        Cras justo odio
+                        <span class="badge bg-primary rounded-pill">14</span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div> -->
 
     <!-- <script>
         console.log("Hello, World!")
     </script> -->
 
     <!--Farklı sayfası index'e yazdırma-->
-    
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
     <!-- <script src="js/hello-world.js"></script> -->
     <!-- <script src="js/02-degisken-tanimlama.js"></script> -->
     <!-- <script src="js/03-degisken-tanimlama.js"></script> -->
@@ -77,7 +114,10 @@
     <!-- <script src="js/023-functions-bolum-sonu.js"></script> -->
     <!-- <script src="js/024-locaStorage-icerisine-veri-eklemek-silmek-duzeltmek.js"></script> -->
     <!-- <script src="js/025-localStorage-icerisine-farkli-turlerde-veri-girmek.js"></script> -->
-    <script src="js/026-localStorage-bolum-sonu-egzerisizi.js"></script>
-
+    <!-- <script src="js/026-localStorage-bolum-sonu-egzerisizi.js"></script> -->
+    <!-- <script src="js/027-form-submit-yonetimi.js"></script> -->
+    <!-- <script src="js/029-formlarla-calismak.js"></script> -->
+    <script src="js/030-dizi-olusturmak-ve-ilk-son-eleman-islemleri.js"></script>
 </body>
+
 </html>
