--- a/index.html
+++ b/index.html
@@ -127,6 +127,9 @@
     <!-- <script src="js/033-for-dongusu-kullanimi.js"></script> -->
     <!-- <script src="js/034-break-and-continue.js"></script> -->
     <!-- <script src="js/035-while-kullanim.js"></script> -->
+    <!-- <script src="js/036-array-forEach-kullanimi.js"></script> -->
+    <!-- <script src="js/037-array-filter-metod.js"></script> -->
+    <script src="js/038-array-map-metod.js"></script>
     
 </body>
 
