--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div id="alert"></div>
 
 <body>
-    <h1 id="greeting">Patika - Front-End 101</h1>
+    <h1 id="greeting">RM</h1>
     <h2 id="info"></h2>
 
     <!-- 010 dom icerisinden oge secimi ve duzenleme islemleri:
@@ -129,8 +129,14 @@
     <!-- <script src="js/035-while-kullanim.js"></script> -->
     <!-- <script src="js/036-array-forEach-kullanimi.js"></script> -->
     <!-- <script src="js/037-array-filter-metod.js"></script> -->
-    <script src="js/038-array-map-metod.js"></script>
-    
+    <!-- <script src="js/038-array-map-metod.js"></script> -->
+    <!-- <script src="js/039-object-nedir-nasil-olusturulur.js"></script> -->
+    <!-- <script src="js/040-object-key-ve-value-yapisinin-kullanimi.js"></script> -->
+    <!-- <script src="js/041-object-icinde-metot-nasil-ekleriz.js"></script> -->
+    <!-- <script src="js/042-object-ve-array-destructuring-nasil-kullanilir.js"></script> -->
+    <!-- <script src="js/043-try-catch-yonetimi.js"></script> -->
+    <script src="js/044-fetch-api.js"></script>
+
 </body>
 
 </html>
